# Pyspark-Template

./: .gitignore  README.md  pyproject.toml
app/jobs/: print_parquet.py  sample.py  sample_job.py
app/readers/: csv.py  parquet.py
app/transform/: common.py
app/utils/: spark.py
app/writers/: csv.py  parquet.py
